--- a/todo.txt
+++ b/todo.txt
@@ -13,8 +13,8 @@ x   x       excluirEmprestimo()
 x   x       excluirItem()
 x   x       devolverTodoEmprestimo()
 x   x       devolverLivro()
-V   x       pesquisarPublicacao()
-V   x       pesquisarLivroAutor()
+V   V       pesquisarPublicacao()
+V   V       pesquisarLivroAutor()
 V   V       listarPublicacoes()
 V   V       listarEmprestimos()
 V   V       carregarArquivo()
