atualização da documentacao

--- a/notebooks/documentacao.ipynb
+++ b/notebooks/documentacao.ipynb
@@ -11,10 +11,15 @@
     "O desafio desse trabalho prático era desenvolver em C++ um gerenciador de Biblioteca que usasse dos conceitos de programação orientada a objetos tais como: gerenciamento de memoria, interface, herança,\n",
     "sobrecargas, upcasting, programação genérica. \n",
     "\n",
-    "A aplicação deveria ser capaz de realizar emprestimos de livros, consulta de publicações por titulo ou autores \n",
+    "A aplicação deveria ser capaz de realizar emprestimos de livros, consulta de publicações por titulo ou autores e atender diversas outras especificações típicas de um gerenciados de bibliotecas.\n",
     "\n",
     "## Como compilar e executar\n",
-    "_GNU/Linux_: basta rodar o comando `make` em um emulador terminal com o programa make instalado.\n",
+    "_GNU/Linux_: basta rodar o comando\n",
+    "    `make` \n",
+    "    em um emulador terminal com o programa make instalado.\n",
+    "    Em seguida pode-se executar o programa \n",
+    "    `./exec <ARQUIVO>` \n",
+    "    em que arquivo é um argumento opcional com o nome de um arquivo a ser carregado pela Biblioteca.\n",
     "\n",
     "Windows: sei la mano\n",
     "\n",
@@ -78,6 +83,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Main\n",
+    "O código principal é bem simples. O código comentado se refere a recepção do nome de um arquivo como argumento pela chamada por terminal. A interface tem  método exibirMenu() que corresponde a um menu intuitivo para saida padrão que fica em um loop até que seja escolhida a opção de sair ou até que seja usado um caractere especial que levante alguma interrupção."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include \"Interface.hpp\"\n",
+    "#include \"Biblioteca.hpp\"\n",
+    "\n",
+    "int main(/*int argc, char** argv*/){\n",
+    "    Biblioteca bib;\n",
+    "    /*if (argc>1){\n",
+    "        string nome = string(argv[1]);\n",
+    "        bib.lerArquivo(nome);\n",
+    "    }*/\n",
+    "    Interface iter = Interface(bib);\n",
+    "    iter.exibirMenu();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Decisões\n",
     "  . Foi decidido que as classes usadas para criar vetores myVector<> possuiriam valores default para todos atributos, contrutor de copia, e as seguintes sobercargas: operator=, operator==, operator<< e operator >>.\n",
     "\n",
@@ -112,6 +145,15 @@
    "metadata": {},
    "source": [
     "## Conclusão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O desenvolvimento desse Trabalho Prático tornou bem evidente a importância da organização por UMLs que facilita o acesso a informações de uma forma eficaz, ja que a arquitetura visual é mais rápida e consistente que a descrição e enumeração. \n",
+    "Também observamos que a decisão de quais métodos são `const` deve ser feita logo no início do desenvolvimento e de forma bem pensada pois terá implicações em outros mpetodos a serem desenvolvidos podendo facilmente tornar uma possível busca er bugs imensamente complexa.\n",
+    "A sobrecarga de operadores e por argumentos se apresenta como uma característica imprescindível da programação orientada a objetos, viabilizando o desenvolvimento de aplicações extensas e complexas, bem como o desenvolvimento por várias pessoas."
    ]
   },
   {
