elts try to convert to pdf this one

--- a/notebooks/documentacao.ipynb
+++ b/notebooks/documentacao.ipynb
@@ -21,8 +21,6 @@
     "    `./exec <ARQUIVO>` \n",
     "    em que arquivo é um argumento opcional com o nome de um arquivo a ser carregado pela Biblioteca.\n",
     "\n",
-    "Windows: sei la mano\n",
-    "\n",
     "\n",
     "## Implementação\n",
     "### Classes e Polimorfismos\n",
@@ -119,7 +117,8 @@
     "  . Usuário é definido pelo nome ou cpf. O que significa que só pode existir um único usuário com um cpf, mesmo que o nome seja diferente, e vice-versa (com implicações em `Usuario::operator==`). Isso impede o cadastro de mais de um cliente com o mesmo nome ou cpf.\n",
     "\n",
     "  . A Biblioteca tem como atributos vetores (myVector) para Livro e Periodicos. Qualquer upcasting feito posteriormente usa de ponteiros de Publicacao* e, quando necessário, se confere a classe do upcasting usando a pavra reservada `dynamic_cast`.\n",
-    "  "
+    "  \n",
+    "  . A classe Date, como tipo a definir, foi criada a partir de um encapsulamento da biblioteca time da linguagem C. Ela possui apenas um atributo que armazena a string da data no formato dd/mm/yyyy. Verificações de consistência foram feitas usando \"regular expressions\" (biblioteca regex.h) para que apenas datas válidas e no formato especificado sejam atribuidos. Uma variável estática constante foi usada pra armazenar a expressão regular de uma data válida. Tal expressão verifica inclusive se o mês é de 31, 30, 29 ou 28 dias corretamente. Foram implementadas sobrecargas de alguns operadores relacionais e de saída e entrada, além de setters para data do dia e adicionar dias."
    ]
   },
   {
